--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
 
 <html>
-
+<style>
+body {
+    background-image: url("img/bg2.png");
+    background-repeat: repeat;
+    }
+h1{
+    color:rgb(242, 35, 35)
+}
+</style>
     <head>
     <title>Falafel Atlas</title>
     </head>
     
     <body>
     <h1>Falafel Atlas</h1>
-    <pre style="color:black;font-size:20px;">
-    On this Website, you will soon find Frido's reviews of the best Falafel Places all over the world!!!
-    Get excited!!!!!
+    <pre style="color:rgb(242, 35, 35);font-size:20px;">
+    Hello and Welcome to the Falafel Atlas. This is my diary of all the Falafel Restaurants I visit. Many of them are in Berlin,
+    but every now and then I get to eat Falafel elsewhere. In the domain of Falafel, my main expertise lies in critiquing Falafel
+    sandwiches and wraps, but I also enjoy eating falafel plates. Of course, other dishes that are often available at Falafel Places
+    are also very dear to me, but I don't want this to turn into a food blog. If there is a Falafel place you think I should visit,
+    please send me an email to <a href="mailto:friedrich.wicke@protonmail.com">friedrich.wicke@protonmail.com</a>.
+    This Website is run by Frido, my personal website is <a href="fridowicke.com">fridowicke.com</a>
     </pre>
     
     </body>
