--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ but every now and then I get to eat Falafel elsewhere in the world. In the domai
 sandwiches and wraps, but I also enjoy eating falafel plates. Of course, other dishes that are often available at Falafel Places
 are also very dear to me, but I don't want this to turn into a food blog. If there is a Falafel place you think I should visit,
 please send me an email to <a href="mailto:friedrich.wicke@protonmail.com">friedrich.wicke@protonmail.com</a>.
-This Website is run by Frido, my personal website is <a href="https://www.fridowicke.com">fridowicke.com</a>
+This Website is run by Frido, my personal website is <a href="https://www.frido.ai">frido.ai</a>
 </pre>
     
     </body>
