--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ h2{
     </head>
     
     <body>
-    <h1>Falafel Atlas</h1>
-    <p style="color:rgb(0, 0, 0);font-size:20px;">
+    <h1 style="font-family: 'Courier New', Courier, monospace;">Falafel Atlas</h1>
+    <p style="color:rgb(0, 0, 0);font-size:20px; font-family: 'Courier New', Courier, monospace;">
 Hello and Welcome to the Falafel Atlas
 This is my diary of all the Falafel Restaurants I visit. Many of them are in Berlin,
 but every now and then I get to eat Falafel elsewhere in the world. In the domain of
@@ -27,12 +27,12 @@ also enjoy eating falafel plates. Of course, other dishes that are often availab
 Falafel Places are also very dear to me, but I don't want this to turn into a food
 blog. If there is a Falafel place you think I should visit, please send me an email
 to <a href="mailto:friedrich.wicke@protonmail.com">friedrich.wicke@protonmail.com</a>.
-This Website is run by Frido, my personal website is <a href="https://www.frido.ai">frido.ai</a>
+This Website is run by Frido, my personal website is <a href="http://frido.ai/">frido.ai</a>
 </p>
 
-<h1>Falafel Places in Berlin</h1>
-<h2>Aiva, Berlin Charlottenburg</h2>
-<p style="color:rgb(0, 0, 0);font-size:20px;">
+<h1 style="font-family: 'Courier New', Courier, monospace;">Falafel Places in Berlin</h1>
+<h2 style="font-family: 'Courier New', Courier, monospace;">Aiva, Berlin Charlottenburg</h2>
+<p style="color:rgb(0, 0, 0);font-size:20px; font-family: 'Courier New', Courier, monospace;">
 Aiva was the place I had great falafel for the first time in my life (almost four years
 ago) and it is still my favorite. It is and probably forever will be the place, where I
 had the most falafel sandwiches. Throughout the first three years that I lived in Berlin,
