--- a/index.html
+++ b/index.html
@@ -49,4 +49,21 @@ the middle shows Marie enjoying the best falafel she ever had. The picture on th
 shows Frido being at his happiest, eating his favorite falafel sandwich, enjoying the
 moment while also feeling a deep connection to his own past.
 </p>
+<h2 style="font-family: 'Courier New', Courier, monospace;">Za'atar, Berlin Schöneberg</h2>
+<p style="color:rgb(0, 0, 0);font-size:20px; font-family: 'Courier New', Courier, monospace;">
+There are three reasons I love this place, two of which you will be able to relate to. First, they
+make good falafel. Really good falafel. Also, they have a huge variety of sandwiches to choose from
+and everything involving eggplant or pomegranate will make you cry tears of joy. Secondly, they have
+a rooftop terrace with a super pretty view, as you can see in the image below.<br>
+<img src="img/Za'atar/views.jpeg" alt="The Falafel Restaurant Zaatar in Schöneberg" width="250" height="175"><br>
+Third and most importantly, this place is right across the street from Pauli's apartment, so I am typically
+with her when i go there, which makes it much better. As a bonus, I will share Pauli's trick for drinking
+Ayran out of the Ayran cups: use your fingernails or a fork to make a small hole at two opposing ends of the
+cup instead of opening the lid. Best Ayran experience you'll ever have. <br>
+<img src="img/Za'atar/ayran.jpeg" alt="Ayran trick" width="175" height="250"><img src="img/Za'atar/handshake.jpeg" alt="Handshake" width="175" height="250"><br>
+The picture on the left shows pauli using her own Ayran trick. The picture on the right shows Frido congratulating Pauli to her well deserved
+falafel sandwich.
+</p>
+
+
 </body>
